<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_rentcar">

    <fragment
        android:id="@+id/navigation_rentcar"
        android:name="com.soenadiwai.getgo.ui.dashboard.DashboardFragment"
        android:label="@string/title_rentcar"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.soenadiwai.getgo.ui.notifications.NotificationsFragment"
        android:label="@string/title_booking"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_refer"
        android:name="com.soenadiwai.getgo.ui.home.HomeFragment"
        android:label="@string/title_booking"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.soenadiwai.getgo.ui.home.HomeFragment"
        android:label="@string/title_refertofriend"
        tools:layout="@layout/fragment_notifications" />


</navigation>