<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/navi_barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:text="@string/title_search_result"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/navi_barLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_address" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.Compat.Notification.Line2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_location"
                        android:textColor="@color/grey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/title_current_location"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.9dp"
                android:background="@drawable/shadow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_date" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.Compat.Notification.Line2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_dateandtime"
                            android:textColor="@color/grey" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/title_time"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="0.9dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/shadow" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/ic_time" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.Compat.Notification.Line2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_location"
                            android:textColor="@color/grey" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/title_current_location"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:background="@color/bottom_nam"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/cardView">

       <LinearLayout
           android:layout_margin="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/bottom_nam"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               style="@style/TextAppearance.AppCompat.Button"
               android:textColor="@color/pink"
               android:textSize="17dp"
               android:text="@string/title_carno"/>

           <TextView
               android:layout_width="150dp"
               android:layout_height="match_parent"
               style="@style/TextAppearance.AppCompat.Subhead"
               android:textColor="@color/white"
               android:text="@string/label_cartext"/>

           <TextView
               android:layout_width="60dp"
               android:layout_height="match_parent"
               android:textAlignment="center"
               android:textStyle="bold"
               android:layout_marginLeft="5dp"
               android:layout_marginRight="5dp"
               android:background="@drawable/backaground_drawable"
               android:textColor="@color/white"
               android:text="@string/label_filter"/>

           <TextView
               android:layout_width="60dp"
               android:layout_height="match_parent"
               android:textAlignment="center"
               android:textStyle="bold"
               android:layout_marginLeft="5dp"
               android:layout_marginRight="5dp"
               android:textColor="@color/white"
               android:background="@drawable/backaground_drawable"
               android:text="@string/label_map"/>

       </LinearLayout>

       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/carinfo_recyclerView"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

       </androidx.recyclerview.widget.RecyclerView>

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>