<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <LinearLayout
        android:id="@+id/navi_barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:padding="10dp"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:drawableRight="@drawable/ic_copy"
            android:padding="10dp"
            android:text="@string/title_booking_id"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navi_barLayout">

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_carname" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navi_barLayout">

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/label_model" />

            <TextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@drawable/backaground_drawable_confirm"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/label_confirm"
                android:textColor="@color/white"
                android:textSize="10dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.Compat.Notification.Line2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_startdate"
                    android:textColor="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_startdate"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_time"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.Compat.Notification.Line2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_enddate"
                    android:textColor="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_enddate"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_time"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="60dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/backaground_drawable_confirm"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.Compat.Notification.Line2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_duration"
                        android:textAlignment="center"
                        android:textColor="@color/grey" />

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="02"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=":"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="00"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="days"
                            android:textColor="@color/white"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="hours"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_drawable"
                android:drawableLeft="@drawable/ic_add"
                android:paddingStart="10dp"
                android:text="Add to Calendar"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_drawable"
                android:drawableLeft="@drawable/ic_extend"
                android:paddingStart="10dp"
                android:text="Extend"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/car_silvermetalic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Estimated Total"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_more"
               android:gravity="center_vertical"
                android:text="S$52.00"/>
        </LinearLayout>

        <!--        <com.smarteist.autoimageslider.SliderView-->
        <!--            android:id="@+id/slider"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="150dp"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            app:sliderAnimationDuration="600"-->
        <!--            app:sliderAutoCycleDirection="back_and_forth"-->
        <!--            app:sliderIndicatorAnimationDuration="600"-->
        <!--            app:sliderIndicatorEnabled="true"-->
        <!--            app:sliderIndicatorGravity="center_horizontal|bottom"-->
        <!--            app:sliderIndicatorMargin="15dp"-->
        <!--            app:sliderIndicatorOrientation="horizontal"-->
        <!--            app:sliderIndicatorPadding="3dp"-->
        <!--            app:sliderIndicatorRadius="2dp"-->
        <!--            app:sliderIndicatorSelectedColor="#5A5A5A"-->
        <!--            app:sliderIndicatorUnselectedColor="#FFF"-->
        <!--            app:sliderScrollTimeInSec="1" />-->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>